remove command pattern from bulk upload segment users
