# api-description/web-api.swagger.yaml
@@ -3368,6 +3368,55 @@ paths:
             $ref: '#/definitions/featureCreateSegmentRequest'
       tags:
         - segment
+  /v1/segment_users/bulk_upload:
+    post:
+      summary: Bulk upload
+      description: Bulk upload segment users.
+      operationId: web.v1.segment_users.bulk_upload
+      responses:
+        "200":
+          description: A successful response.
+          schema:
+            $ref: '#/definitions/featureBulkUploadSegmentUsersResponse'
+        "400":
+          description: Returned for bad requests that may have failed validation.
+          schema:
+            $ref: '#/definitions/googlerpcStatus'
+          examples:
+            application/json:
+              code: 3
+              details: []
+              message: invalid arguments error
+        "401":
+          description: Request could not be authenticated (authentication required).
+          schema:
+            $ref: '#/definitions/googlerpcStatus'
+          examples:
+            application/json:
+              code: 16
+              details: []
+              message: not authenticated
+        "503":
+          description: Returned for internal errors.
+          schema:
+            $ref: '#/definitions/googlerpcStatus'
+          examples:
+            application/json:
+              code: 13
+              details: []
+              message: internal
+        default:
+          description: An unexpected error response.
+          schema:
+            $ref: '#/definitions/googlerpcStatus'
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            $ref: '#/definitions/featureBulkUploadSegmentUsersRequest'
+      tags:
+        - segment
   /v1/segments:
     get:
       summary: List
@@ -5247,6 +5296,22 @@ definitions:
         type: string
         format: byte
         title: segment user ids separated by comma or new line
+      state:
+        $ref: '#/definitions/featureSegmentUserState'
+  featureBulkUploadSegmentUsersRequest:
+    type: object
+    properties:
+      segmentId:
+        type: string
+      command:
+        $ref: '#/definitions/featureBulkUploadSegmentUsersCommand'
+        description: deprecated
+      environmentId:
+        type: string
+      data:
+        type: string
+        format: byte
+        description: segment user ids separated by comma or new line
       state:
         $ref: '#/definitions/featureSegmentUserState'
   featureBulkUploadSegmentUsersResponse:
